force-app/main/default/objects/Provus_Feedback__c/Provus_Feedback__c.object-meta.xml
<CustomObject>
    <description
  >Stores user feedback for the Provus Express Quoting application.</description>
    <label>Provus Feedback</label>
    <nameField>
        <displayFormat>FB-{0000}</displayFormat>
        <label>Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provus Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>