force-app/main/default/objects/Provus_Feedback__c/fields/Card_Color__c.field-meta.xml
<CustomField>
    <fullName>Card_Color__c</fullName>
    <description
  >The background color assigned to this feedback card in the dashboard.</description>
    <label>Card Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>