force-app/main/default/objects/Provus_Feedback__c/fields/Feedback_Text__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Text__c</fullName>
    <description>The feedback content submitted by the user.</description>
    <label>Feedback Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>