force-app/main/default/objects/Provus_Feedback__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>The name of the user who submitted the feedback.</description>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>